--- a/ChatAPP/appsettings.json
+++ b/ChatAPP/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "ChatConnection": "Server=.;Database=Chatting;Trusted_Connection = True;TrustServerCertificate = True"
+  }
 }
